--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,8 +6,9 @@
 
 .app {
   display: flex;
+  flex-flow:wrap;
   background: #141527;
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
   width: 100%;
 }
