--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,8 @@
   display:flex;
   height:3em;
   align-items: center;
+  margin:10px 0px;
+  padding:0px 20px 0px 0px;
 }
 
 .header .logo {
@@ -10,8 +12,6 @@
   color:#fff;
   font-weight:600;
   font-size:25px;
-
-
 }
 
 .header .logo span {
