--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -3,7 +3,7 @@ aside {
   display:flex;
   flex-flow:column;
   justify-content: flex-start;
-
+  padding-right:20px;
 }
 
 aside button {
@@ -11,16 +11,27 @@ aside button {
   border:0;
   color:#fff;
   text-transform:capitalize;
-  margin-bottom: 10px;
   font-size:15px;
   text-align:left;
-  padding:5px 20px;
+  padding:10px 20px;
+  display: flex;
+  align-items: center;
+
 }
 
 aside button:hover {
   cursor:pointer;
+  background-color:rgba(255,152,0,.33);
+  /* background-color:#ff9800; */
 }
 
 aside button.active {
   font-weight:bold;
+  background-color:#ff9800;
+}
+
+aside button img {
+  width:40px;
+  height:40px;
+  margin-right:10px;
 }
