--- a/src/components/NewsArticle/NewsArticle.css
+++ b/src/components/NewsArticle/NewsArticle.css
@@ -1,9 +1,11 @@
 .news-article {
-  width:33.3%;
-
+  width:30%;
+  border-radius:4px;
+  overflow: hidden;
   display:flex;
   flex-flow:column;
   background-color:#fff;
+  margin:0px 3.3% 30px 0px;
 }
 
 .news-article img {
