--- a/src/components/NewsArticle/NewsArticle.css
+++ b/src/components/NewsArticle/NewsArticle.css
@@ -11,3 +11,21 @@
 .news-article img {
   width:100%;
 }
+
+.news-article h3,
+.news-article p {
+  margin-bottom:10px;
+  padding:20px 10px 0px 10px;
+}
+
+.news-article a {
+  background-color: #ff9800;
+  border-radius:4px;
+  padding:8px 10px;
+  max-width: 140px;
+  margin: 0 auto 20px;
+  color:#fff;
+  text-decoration:none;
+  font-weight:600;
+  text-transform:uppercase;
+}
